fix broken CSS

--- a/styles/OG.module.css
+++ b/styles/OG.module.css
@@ -1,27 +1,3 @@
-:global(html) {
-  position: relative;
-}
-:global(body) {
-  position: relative;
-  z-index: -2;
-  margin: 0;
-  display: grid;
-  & > div,
-  & > div > div {
-    display: grid;
-  }
-  nav,
-  footer {
-    display: none !important;
-  }
-  /* Some global hacks to override the default styles */
-  [class*='ContentStyles'] {
-    width: 100%;
-    padding: 0;
-    max-width: none;
-  }
-}
-
 .thumbnail {
   top: 2rem;
   right: 2rem;
